--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,10 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: My_Portfolio
+  adapter: mysql2
+  encoding: utf8mb4
+  collation: utf8mb4_general_ci
+  host: rds-mysql-server.c0jyjztkcxlb.ap-northeast-1.rds.amazonaws.com
+  username: root
+  password: hogehoge
